tests/fixtures/syntax/invalid/file_text_equals_workspace_path_literal.repor
case "file text_equals expected text requires a TextValue, not a workspace path literal" {
  $ true
  assert {
    file <"out.txt"> text_equals <"expected.txt">
  }
}
